fixed issue with mobile and desktop Product button overlapping with media queries

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ $letter-spacing: 2px;
 $screen-xs: 376px;
 $screen-sm: 576px;
 $screen-md: 768px;
-$screen-lg: 992px;
+$screen-lg: 963px;
 $screen-xl: 1200px;
 
 
